0.5.2 Fix: Editor bottom covered by statusbar

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -38,6 +38,10 @@ body,
     --status-icon-margin: 10px;
 }
 
+.editor {
+    --header-height: 21px;
+}
+
 /* BBCode 内容区域的基础重置 */
 .bbcode *,
 ::after,
